# dataops

./: README.md  pyproject.toml
dataops_toolkits/: utils.py
dataops_toolkits/scripts/: adduuid.py  jsonconvert.py
