[tool.poetry]
name = "dataops-toolkits"
version = "0.1.0"
description = "Gadget Collection of DataOps in MLOps"
authors = ["yuiant <gyuiant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
label-studio = "1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
